# gnome-dictionary

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  gnome-dictionary.doap
data/: Makefile.am  gnome-dictionary-menus.ui  gnome-dictionary.1  gnome-dictionary.appdata.xml.in  gnome-dictionary.desktop.in.in  org.gnome.Dictionary.appdata.xml.in  org.gnome.Dictionary.desktop.in.in  org.gnome.dictionary.gschema.xml  org.gnome.dictionary.gschema.xml.in
docs/reference/gdict/: Makefile.am  gdict-docs.sgml
help/: Makefile.am
help/C/: definition.page  dictionary-select.page  find.page  index.docbook  index.page  introduction.page  legal.xml  print-font.page  print.page  prob-error-while-retrieving-definition.page  save-definition.page  save-text.page  shortcuts.page  similar-words.page  source-add-remote.page  sources-add-remote.page.stub  sources-default.page  sources-default.page.stub  sources-delete.page  sources-delete.page.stub  sources-edit.page  sources-edit.page.stub  sources-guide.page  sources-select.page  sources.page  strategies.page  text-copy.page  text-operations.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
libgdict/: Makefile.am  gdict-client-context.c  gdict-client-context.h  gdict-context-private.h  gdict-context.c  gdict-context.h  gdict-database-chooser-button.c  gdict-database-chooser-button.h  gdict-database-chooser.c  gdict-database-chooser.h  gdict-debug.h  gdict-defbox.c  gdict-defbox.h  gdict-private.h  gdict-source-chooser.c  gdict-source-chooser.h  gdict-source-loader.c  gdict-source-loader.h  gdict-source.c  gdict-source.h  gdict-speller.c  gdict-speller.h  gdict-strategy-chooser.c  gdict-strategy-chooser.h  gdict-utils.c  gdict-utils.h  gdict-version.h.in  gdict.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  (+58 more)
src/: Makefile.am  gdict-about.c  gdict-about.h  gdict-app-menus.ui  gdict-app-window.ui  gdict-app.c  gdict-app.h  gdict-common.c  gdict-common.h  gdict-pref-dialog.c  gdict-pref-dialog.h  gdict-pref-dialog.ui  gdict-print.c  gdict-print.h  gdict-sidebar.c  gdict-sidebar.h  gdict-source-dialog.c  gdict-source-dialog.h  gdict-source-dialog.ui  gdict-window.c  gdict-window.h  gdict.gresource.xml  main.c
