@YELP_HELP_RULES@

HELP_ID = gnome-dictionary

HELP_FILES = \
	   index.docbook \
	   legal.xml
				
HELP_MEDIA = \
	figures/gnome-dictionary-add-source.png	\	
	figures/gnome-dictionary-applet-window.png \	
	figures/gnome-dictionary-applet.png \	
	figures/gnome-dictionary-application.png \	
	figures/gnome-dictionary-find.png \	
	figures/gnome-dictionary-lookup.png \
	figures/gnome-dictionary-preferences-print.png \	
	figures/gnome-dictionary-preferences-source.png	

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr gl id it oc ru sl sv uk zh_CN


