@YELP_HELP_RULES@

HELP_ID = gnome-dictionary

HELP_FILES = \
	   definition.page \
	   find.page \
	   index.page \
	   introduction.page \
	   legal.xml \
	   print.page \
	   save-text.page \
	   similar-words.page \
	   text-operations.page 
HELP_MEDIA = \
	figures/gnome-dictionary-icon.png

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr gl id it oc pt_BR ru sl sv uk zh_CN
