@YELP_HELP_RULES@

HELP_ID = gnome-dictionary

HELP_FILES = \
	   definition.page \
	   find.page \
	   index.page \
	   introduction.page \
	   keyboard-shortcuts.page \
	   legal.xml \
	   print-font.page \
	   print.page \
	   prob-error-while-retrieving-definition.page \
	   save-definition.page \
	   similar-words.page \
	   source-add-local.page \
	   sources-guide.page \
	   strategies.page \
	   text-operations.page
HELP_MEDIA = \
	figures/gnome-dictionary-icon.png \
	figures/gnome-dictionary.png
HELP_LINGUAS = ca cs da de el en_GB es eu fi fr gl id it oc ru sl sv uk zh_CN
